Fix Legend box CSS and improve colour contrast

--- a/client/src/Legend.css
+++ b/client/src/Legend.css
@@ -2,6 +2,10 @@
   width: 20%;
   min-width: 100px;
   border: 1px solid black;
+
+  height: 100%;
+  box-sizing: border-box;
+  margin-top: 0;
 }
 
 .legend-item.selected {
